[package]
name = "swap-n"
version = "0.1.0"
authors = ["Terry <terrysdev83779@gmail.com>"]
edition = "2021"
license = "MIT"
description = "an n argument extension to std::mem::swap"
readme = "README.md"
repository = "https://github.com/swooping-magpie/swap-n"
keywords = ["mem", "ptr", "linked-list", "swap", "node"]
categories = ["embedded", "no-std", "memory-management", "rust-patterns", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
